--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,16 @@
 # Visual Studio cache directory
 .vs/
 
+.vscode/*      # Maybe .vscode/**/* instead - see comments
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+**/.history
+
 # Gradle cache directory
 .gradle/
 
